ChangeLog

Name: William Lai
Date: 10-15-2013
Description: 2-ply brute force AI
    * src/ComputerPlayer.java: Upgraded AI to 2-ply (changeable, but >3 ply is untolerably slow). Now knows how to checkmate.
    * src/Definitions.java: Added PLY_DEPTH constant that can be changed for setting AI depth
    * src/StandardChessGame.java: Added stopgap in checkBoardState. Still need something to bring applet to graceful end.

Name: William Lai
Date: 10-15-2013
Description: Readme update
    * README.txt: Added instructions on how to download and run program from Eclipse.

Name: William Lai
Date: 10-15-2013
Description: Static Evaluation 1-ply AI
    * src/ComputerPlayer.java: New file. Computer player uses static board evaluation (1-ply) to make its moves.
    * src/Game.java: Added abstract function getHumanMove
    * src/HumanPlayer.java: Added new constructor, prompts move by using call to its Game object
    * src/Player.java: Player now has a Game object associated with it
    * src/StandardChessGame.java: Added new helper functions and moved some more lines from moveSelected to processMove for flexibility.

Name: William Lai
Date: 10-14-2013
Description: Stalemate, legal move lists, animation tweaking
    * src/Game.java: Changed some function signatures for flexibility
    * src/King.java: Changed some legal move conditions
    * src/StandardChessGame.java: Implemented stalemate, added allMoves function for future utility
    * src/StandardChessGameAnimation.java: Tweaked animation parameters to make the UI a bit smoother.

Name: Vincent Wong
Date: 10-10-2013
Description: Added board markers, added player names
    * src/StandardChessGame.java: Implemented a bit of Player integration
    * src/StandardChessGameGraphics.java: Added board marker painting, player name painting
    * src/HumanPlayer.java: New file. Doesn't really do anything though except allows instantiation

Name: Vincent Wong
Date: 10-03-2013